--- a/src/envir/Makefile.in
+++ b/src/envir/Makefile.in
@@ -27,7 +27,7 @@ HAVE_DLOPEN=@HAVE_DLOPEN@
 #
 COPTS=$(CFLAGS) $(AKAROA_CFLAGS) -I$(OMNETPP_INCL_DIR) -DBUILDING_ENVIR -DHAVE_DLOPEN=$(HAVE_DLOPEN)
 
-OBJS=args.o cenvir.o cinifile.o main.o omnetapp.o slaveapp.o seeds.o \
+OBJS=args.o cenvir.o cinifile.o main.o omnetapp.o seeds.o \
      patmatch.o platdep.o speedmtr.o filemgrs.o akoutvectormgr.o
 
 #
