*** empty log message ***

--- a/src/sim/Makefile.in
+++ b/src/sim/Makefile.in
@@ -55,10 +55,11 @@ CPPOBJS= $(CPPOBJS_STD)
 
 ifeq ($(WITH_NETBUILDER),yes)
 CPPOBJS += $(CPPOBJS_NETBUILDER)
-COPTS += /DWITH_NETBUILDER /I "$(OMNETPP_SRC_DIR)/nedxml"
+COPTS += -DWITH_NETBUILDER /I "$(OMNETPP_SRC_DIR)/nedxml"
 endif
 
 ifeq ($(WITH_PARSIM),yes)
+COPTS += -DWITH_PARSIM
 CPPOBJS += $(CPPOBJS_PARSIM)
 ifeq ($(HAVE_MPI),yes)
 CPPOBJS += $(CPPOBJS_MPI)
