--- a/src/sim/Makefile.vc
+++ b/src/sim/Makefile.vc
@@ -40,6 +40,7 @@ COPTS= $(COPTS) /DWITH_NETBUILDER /I "$(OMNETPP_SRC_DIR)/nedxml"
 !endif
 
 !if "$(WITH_PARSIM)"=="yes"
+COPTS= $(COPTS) /DWITH_PARSIM
 CPPOBJS= $(CPPOBJS) $(CPPOBJS_PARSIM)
 !if "$(HAVE_MPI)"=="yes"
 CPPOBJS= $(CPPOBJS) $(CPPOBJS_MPI)
