--- a/samples/fddi/Makefile.vc
+++ b/samples/fddi/Makefile.vc
@@ -15,19 +15,14 @@ TARGET = fddi.exe
 # USERIF_LIBS=$(CMDENV_LIBS)
 USERIF_LIBS=$(TKENV_LIBS)
 
-# uncomment 1 of the 3 lines to support either serial or parallel operation
-KERNEL_LIBS=$(STD_KERNEL_LIBS)
-# KERNEL_LIBS=$(PVM_KERNEL_LIBS)
-# KERNEL_LIBS=$(MPI_KERNEL_LIBS)
-
 # .ned or .h include paths with -I
 INCLUDE_PATH=
 
 # misc additional object and library files to link
-EXRA_OBJS=
+EXTRA_OBJS=
 
-# object files in subdirectories
-SUBDIR_OBJS=
+# object files from other directories to link with
+EXT_DIR_OBJS=
 
 # Additional libraries (-L option -l option)
 LIBS=
@@ -42,9 +37,15 @@ CMDENV_LIBS=envir.lib cmdenv.lib
 TKENV_LIBS=envir.lib tkenv.lib $(TK_LIBS)
 
 # Simulation kernel
-STD_KERNEL_LIBS=sim_std.lib
-MPI_KERNEL_LIBS=sim_mpi.lib $(MPI_LIBS)
-PVM_KERNEL_LIBS=sim_pvm.lib $(PVM_LIBS)
+KERNEL_LIBS=sim_std.lib
+
+!if "$(WITH_NETBUILDER)"=="yes"
+KERNEL_LIBS= $(KERNEL_LIBS) nedxml.lib $(XML_LIBS)
+!endif
+
+!if "$(WITH_PARSIM)"=="yes"
+KERNEL_LIBS= $(KERNEL_LIBS) $(MPI_LIBS)
+!endif
 
 # Simulation kernel and user interface libraries
 OMNETPP_LIBS=/libpath:$(OMNETPP_LIB_DIR) $(USERIF_LIBS) $(KERNEL_LIBS) $(SYS_LIBS)
@@ -53,91 +54,82 @@ COPTS=$(CFLAGS) $(INCLUDE_PATH) -I$(OMNETPP_INCL_DIR)
 NEDCOPTS=$(CFLAGS) $(NEDCFLAGS) $(INCLUDE_PATH) -I$(OMNETPP_INCL_DIR)
 
 #------------------------------------------------------------------------------
-# Object files from this directory to link
+# object files in this directory
 OBJS= fddi_mac_n.obj fddi_nets_n.obj fddi_nodes_n.obj fddi_rings_n.obj othermod_n.obj ssm_ifs_n.obj fddi_mac.obj othermod.obj ssm_ifs.obj
 
-$(TARGET): $(OBJS) $(EXRA_OBJS) Makefile.vc 
-	$(LINK) $(LDFLAGS) $(OBJS) $(EXRA_OBJS) $(SUBDIR_OBJS) $(LIBS) $(OMNETPP_LIBS) /out:$(TARGET)
+# subdirectories to recurse into
+SUBDIRS= 
+SUBDIR_TARGETS= 
 
-# purify: $(OBJS) $(EXRA_OBJS)  Makefile.vc
-# 	purify $(CXX) $(LDFLAGS) $(OBJS) $(EXRA_OBJS) $(SUBDIR_OBJS) $(LIBS) -L$(OMNETPP_LIB_DIR) $(KERNEL_LIBS) $(USERIF_LIBS) $(SYS_LIBS_PURE) -o $(TARGET).pure
+$(TARGET): $(OBJS) $(EXTRA_OBJS)  Makefile.vc
+	$(LINK) $(LDFLAGS) $(OBJS) $(EXTRA_OBJS) $(EXT_DIR_OBJS) $(LIBS) $(OMNETPP_LIBS) /out:$(TARGET)
 
-fddi_mac_n.obj: fddi_mac_n.cc
-	$(CXX) -c $(NEDCOPTS) /Tp fddi_mac_n.cc
+# purify: $(OBJS) $(EXTRA_OBJS)  Makefile.vc
+# 	purify $(CXX) $(LDFLAGS) $(OBJS) $(EXTRA_OBJS) $(EXT_DIR_OBJS) $(LIBS) -L$(OMNETPP_LIB_DIR) $(KERNEL_LIBS) $(USERIF_LIBS) $(SYS_LIBS_PURE) -o $(TARGET).pure
 
-fddi_mac_n.cc: fddi_mac.ned
-	$(NEDC:/=\) -s _n.cc $(INCLUDE_PATH) fddi_mac.ned
+subdirs: $(SUBDIR_TARGETS)
 
-fddi_nets_n.obj: fddi_nets_n.cc
-	$(CXX) -c $(NEDCOPTS) /Tp fddi_nets_n.cc
+fddi_mac_n.obj: fddi_mac_n.cpp
+	$(CXX) -c $(NEDCOPTS) /Tp fddi_mac_n.cpp
 
-fddi_nets_n.cc: fddi_nets.ned
-	$(NEDC:/=\) -s _n.cc $(INCLUDE_PATH) fddi_nets.ned
+fddi_mac_n.cpp: fddi_mac.ned
+	$(NEDC:/=\) -s _n.cpp $(INCLUDE_PATH) fddi_mac.ned
 
-fddi_nodes_n.obj: fddi_nodes_n.cc
-	$(CXX) -c $(NEDCOPTS) /Tp fddi_nodes_n.cc
+fddi_nets_n.obj: fddi_nets_n.cpp
+	$(CXX) -c $(NEDCOPTS) /Tp fddi_nets_n.cpp
 
-fddi_nodes_n.cc: fddi_nodes.ned
-	$(NEDC:/=\) -s _n.cc $(INCLUDE_PATH) fddi_nodes.ned
+fddi_nets_n.cpp: fddi_nets.ned
+	$(NEDC:/=\) -s _n.cpp $(INCLUDE_PATH) fddi_nets.ned
 
-fddi_rings_n.obj: fddi_rings_n.cc
-	$(CXX) -c $(NEDCOPTS) /Tp fddi_rings_n.cc
+fddi_nodes_n.obj: fddi_nodes_n.cpp
+	$(CXX) -c $(NEDCOPTS) /Tp fddi_nodes_n.cpp
 
-fddi_rings_n.cc: fddi_rings.ned
-	$(NEDC:/=\) -s _n.cc $(INCLUDE_PATH) fddi_rings.ned
+fddi_nodes_n.cpp: fddi_nodes.ned
+	$(NEDC:/=\) -s _n.cpp $(INCLUDE_PATH) fddi_nodes.ned
 
-othermod_n.obj: othermod_n.cc
-	$(CXX) -c $(NEDCOPTS) /Tp othermod_n.cc
+fddi_rings_n.obj: fddi_rings_n.cpp
+	$(CXX) -c $(NEDCOPTS) /Tp fddi_rings_n.cpp
 
-othermod_n.cc: othermod.ned
-	$(NEDC:/=\) -s _n.cc $(INCLUDE_PATH) othermod.ned
+fddi_rings_n.cpp: fddi_rings.ned
+	$(NEDC:/=\) -s _n.cpp $(INCLUDE_PATH) fddi_rings.ned
 
-ssm_ifs_n.obj: ssm_ifs_n.cc
-	$(CXX) -c $(NEDCOPTS) /Tp ssm_ifs_n.cc
+othermod_n.obj: othermod_n.cpp
+	$(CXX) -c $(NEDCOPTS) /Tp othermod_n.cpp
 
-ssm_ifs_n.cc: ssm_ifs.ned
-	$(NEDC:/=\) -s _n.cc $(INCLUDE_PATH) ssm_ifs.ned
+othermod_n.cpp: othermod.ned
+	$(NEDC:/=\) -s _n.cpp $(INCLUDE_PATH) othermod.ned
 
-fddi_mac.obj: fddi_mac.cc
-	$(CXX) -c $(COPTS) /Tp fddi_mac.cc
+ssm_ifs_n.obj: ssm_ifs_n.cpp
+	$(CXX) -c $(NEDCOPTS) /Tp ssm_ifs_n.cpp
 
-othermod.obj: othermod.cc
-	$(CXX) -c $(COPTS) /Tp othermod.cc
+ssm_ifs_n.cpp: ssm_ifs.ned
+	$(NEDC:/=\) -s _n.cpp $(INCLUDE_PATH) ssm_ifs.ned
 
-ssm_ifs.obj: ssm_ifs.cc
-	$(CXX) -c $(COPTS) /Tp ssm_ifs.cc
+fddi_mac.obj: fddi_mac.cpp
+	$(CXX) -c $(COPTS) /Tp fddi_mac.cpp
+
+othermod.obj: othermod.cpp
+	$(CXX) -c $(COPTS) /Tp othermod.cpp
+
+ssm_ifs.obj: ssm_ifs.cpp
+	$(CXX) -c $(COPTS) /Tp ssm_ifs.cpp
 
 
-doc: neddoc.html htmldocs
+#doc: neddoc doxy
 
-neddoc.html: 
-	@opp_neddoc  > neddoc.html
-	@echo File neddoc.html generated.
+#neddoc:
+#	@opp_neddoc -a
 
-htmldocs:
-	@doxygen -g- | sed "s/^PROJECT_NAME.*/PROJECT_NAME = fddi/;\
-	s|^INPUT *=.*|INPUT = . |;\
-	s/^EXTRACT_ALL *=.*/EXTRACT_ALL = yes/;\
-	s/^EXTRACT_PRIVATE *=.*/EXTRACT_PRIVATE = yes/;\
-	s/^EXCLUDE_PATTERNS *=.*/EXCLUDE_PATTERNS = *_n.cc *_n.h/;\
-	s/^ALPHABETICAL_INDEX *=.*/ALPHABETICAL_INDEX = yes/;\
-	s/^HTML_OUTPUT *=.*/HTML_OUTPUT = htmldoc/;\
-	s/^GENERATE_LATEX *=.*/GENERATE_LATEX = no/;\
-	s/^GENERATE_TREEVIEW *=.*/GENERATE_TREEVIEW = yes/;\
-	s/^HIDE_UNDOC_RELATIONS *=.*/HIDE_UNDOC_RELATIONS = no/;\
-	s|^TAGFILES *=.*|TAGFILES = $(OMNETPP_ROOT)/doc/api/opptags.xml=$(OMNETPP_ROOT)/doc/api|;\
-	s|^GENERATE_TAGFILE *=.*|GENERATE_TAGFILE = htmldoc/tags.xml|;\
-	s/^QUIET *=.*/QUIET = yes/" > doxy.cfg
-	@doxygen doxy.cfg
-	@echo Code documentation generated. Now, point your web browser to ./htmldoc/index.html.
+#doxy: doxy.cfg
+#	@doxygen doxy.cfg
 
 clean:
-	-del *.obj *_n.cc *_n.h *_m.cc *_m.h $(TARGET)$(EXE_SUFFIX) 2>NUL
+	-del *.obj *_n.cpp *_n.h *_m.cpp *_m.h $(TARGET)$(EXE_SUFFIX) 2>NUL
 	-del *.vec *.sca 2>NUL
-	-del /S neddoc.html htmldoc 2>NUL
+	-for %%i in ( $(SUBDIRS) ) do cd %%i && nmake /nologo /f Makefile.vc clean && cd ..
 
 depend:
-	$(MAKEDEPEND) $(INCLUDE_PATH) -f Makefile.vc -- *.cc
+	$(MAKEDEPEND) $(INCLUDE_PATH) -f Makefile.vc -- *.cpp
 
 re-makemake:
 	opp_nmakemake_vc -f   #recreate Makefile
