--- a/samples/neddemo/Makefile.vc
+++ b/samples/neddemo/Makefile.vc
@@ -55,7 +55,7 @@ NEDCOPTS=$(CFLAGS) $(NEDCFLAGS) $(INCLUDE_PATH) -I$(OMNETPP_INCL_DIR)
 
 #------------------------------------------------------------------------------
 # object files in this directory
-OBJS= binarytree_n.obj chain_n.obj fullgraph_n.obj hexgrid_n.obj mesh_n.obj randomgraph_n.obj star_n.obj node.obj
+OBJS= binarytree_n.obj chain_n.obj fullgraph_n.obj hexgrid_n.obj mesh_n.obj randomgraph_n.obj star_n.obj      node.obj  
 
 # subdirectories to recurse into
 SUBDIRS= 
@@ -132,7 +132,7 @@ depend:
 	$(MAKEDEPEND) $(INCLUDE_PATH) -f Makefile.vc -- *.cc
 
 re-makemake:
-	opp_nmakemake_vc -f   #recreate Makefile
+	opp_nmakemake -f -f  #recreate Makefile
 
 # DO NOT DELETE THIS LINE -- make depend depends on it.
 
