--- a/samples/dyna/Makefile.vc
+++ b/samples/dyna/Makefile.vc
@@ -55,7 +55,7 @@ NEDCOPTS=$(CFLAGS) $(NEDCFLAGS) $(INCLUDE_PATH) -I$(OMNETPP_INCL_DIR)
 
 #------------------------------------------------------------------------------
 # object files in this directory
-OBJS= dyna_n.obj dynapacket_m.obj client.obj server.obj servproc.obj switch.obj
+OBJS= dyna_n.obj dynapacket_m.obj client.obj   server.obj servproc.obj switch.obj
 
 # subdirectories to recurse into
 SUBDIRS= 
@@ -69,29 +69,29 @@ $(TARGET): $(OBJS) $(EXTRA_OBJS)  Makefile.vc
 
 subdirs: $(SUBDIR_TARGETS)
 
-dyna_n.obj: dyna_n.cpp
-	$(CXX) -c $(NEDCOPTS) /Tp dyna_n.cpp
+dyna_n.obj: dyna_n.cc
+	$(CXX) -c $(NEDCOPTS) /Tp dyna_n.cc
 
-dyna_n.cpp: dyna.ned
-	$(NEDC:/=\) -s _n.cpp $(INCLUDE_PATH) dyna.ned
+dyna_n.cc: dyna.ned
+	$(NEDC:/=\) -s _n.cc $(INCLUDE_PATH) dyna.ned
 
-dynapacket_m.obj: dynapacket_m.cpp
-	$(CXX) -c $(NEDCOPTS) /Tp dynapacket_m.cpp
+dynapacket_m.obj: dynapacket_m.cc
+	$(CXX) -c $(NEDCOPTS) /Tp dynapacket_m.cc
 
-dynapacket_m.cpp dynapacket_m.h: dynapacket.msg
-	$(MSGC:/=\) -s _m.cpp $(INCLUDE_PATH) dynapacket.msg
+dynapacket_m.cc dynapacket_m.h: dynapacket.msg
+	$(MSGC:/=\) -s _m.cc $(INCLUDE_PATH) dynapacket.msg
 
-client.obj: client.cpp
-	$(CXX) -c $(COPTS) /Tp client.cpp
+client.obj: client.cc
+	$(CXX) -c $(COPTS) /Tp client.cc
 
-server.obj: server.cpp
-	$(CXX) -c $(COPTS) /Tp server.cpp
+server.obj: server.cc
+	$(CXX) -c $(COPTS) /Tp server.cc
 
-servproc.obj: servproc.cpp
-	$(CXX) -c $(COPTS) /Tp servproc.cpp
+servproc.obj: servproc.cc
+	$(CXX) -c $(COPTS) /Tp servproc.cc
 
-switch.obj: switch.cpp
-	$(CXX) -c $(COPTS) /Tp switch.cpp
+switch.obj: switch.cc
+	$(CXX) -c $(COPTS) /Tp switch.cc
 
 
 #doc: neddoc doxy
@@ -103,15 +103,15 @@ switch.obj: switch.cpp
 #	@doxygen doxy.cfg
 
 clean:
-	-del *.obj *_n.cpp *_n.h *_m.cpp *_m.h $(TARGET)$(EXE_SUFFIX) 2>NUL
+	-del *.obj *_n.cc *_n.h *_m.cc *_m.h $(TARGET)$(EXE_SUFFIX) 2>NUL
 	-del *.vec *.sca 2>NUL
 	-for %%i in ( $(SUBDIRS) ) do cd %%i && nmake /nologo /f Makefile.vc clean && cd ..
 
 depend:
-	$(MAKEDEPEND) $(INCLUDE_PATH) -f Makefile.vc -- *.cpp
+	$(MAKEDEPEND) $(INCLUDE_PATH) -f Makefile.vc -- *.cc
 
 re-makemake:
-	opp_nmakemake_vc -f   #recreate Makefile
+	opp_nmakemake -f -f  #recreate Makefile
 
 # DO NOT DELETE THIS LINE -- make depend depends on it.
 
