--- a/samples/p-to-p/Makefile.vc
+++ b/samples/p-to-p/Makefile.vc
@@ -55,7 +55,7 @@ NEDCOPTS=$(CFLAGS) $(NEDCFLAGS) $(INCLUDE_PATH) -I$(OMNETPP_INCL_DIR)
 
 #------------------------------------------------------------------------------
 # object files in this directory
-OBJS= ppif_n.obj ppnet_n.obj ppsink_n.obj ppsource_n.obj ppif.obj ppsink.obj ppsource.obj
+OBJS= ppif_n.obj ppnet_n.obj ppsink_n.obj ppsource_n.obj ppif.obj   ppsink.obj  ppsource.obj 
 
 # subdirectories to recurse into
 SUBDIRS= 
@@ -120,7 +120,7 @@ depend:
 	$(MAKEDEPEND) $(INCLUDE_PATH) -f Makefile.vc -- *.cc
 
 re-makemake:
-	opp_nmakemake_vc -f   #recreate Makefile
+	opp_nmakemake -f -f  #recreate Makefile
 
 # DO NOT DELETE THIS LINE -- make depend depends on it.
 
