--- a/samples/queueing/Makefile.vc
+++ b/samples/queueing/Makefile.vc
@@ -55,7 +55,7 @@ NEDCOPTS=$(CFLAGS) $(NEDCFLAGS) $(INCLUDE_PATH) -I$(OMNETPP_INCL_DIR)
 
 #------------------------------------------------------------------------------
 # object files in this directory
-OBJS= classifier_n.obj delay_n.obj pqueue_n.obj qnet_n.obj server_n.obj sink_n.obj source_n.obj classifier.obj delay.obj pqueue.obj server.obj sink.obj source.obj
+OBJS= classifier_n.obj delay_n.obj pqueue_n.obj qnet_n.obj server_n.obj sink_n.obj source_n.obj classifier.obj  delay.obj  pqueue.obj   server.obj  sink.obj  source.obj 
 
 # subdirectories to recurse into
 SUBDIRS= 
@@ -147,7 +147,7 @@ depend:
 	$(MAKEDEPEND) $(INCLUDE_PATH) -f Makefile.vc -- *.cc
 
 re-makemake:
-	opp_nmakemake_vc -f   #recreate Makefile
+	opp_nmakemake -f -f  #recreate Makefile
 
 # DO NOT DELETE THIS LINE -- make depend depends on it.
 
